Overflow issue fix

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -19,6 +19,4 @@
      background-color: #F04935 !important;
 }
 
-   body {
-     overflow-x: hidden;
-}
+body, html { overflow-x: clip; } 
